[package]
name = "gas_tracking_dapp_icp_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8"
ic-cdk = "0.7"
ic-cdk-timers = "0.1"
ic-cdk-macros = "0.7"
serde = { version = "1.0", features = ["derive"] } # Needed for serialization
serde_derive = "1.0"  # Needed for #[derive(Deserialize)]
